--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,136 +1,152 @@
 <% include partials/header %>
     <% include partials/landing-navbar %>
         <div id="wrapper">
-            <div class="section landing-page text-center active">
-                <h1 style="font-size: 60px;"><span style="font-size: 90px;">&alpha;</span>Bit</h1>
-                <a href="roadmap" class="btn btn-info" >RoadMap for CSE</a>
+            <div class="section landing-page text-center ">
+                <h1 style="font-size: 6rem;"><span style="font-size: 9rem;">&alpha;</span>Bit</h1>
+                <a href="roadmap" class="btn btn-info btn-lg">RoadMap for CSE</a>
             </div>
             <div class="section ">
-                <div class="text-center m-3" style="font-size:25px; color: white">Events</div>
-                <div class="row">
-                    <% Events.forEach(function(event) {
-                             %>
-                            <div class="card" class="ml-3 "; style="width:40%; margin-left: 5rem; margin-top: 1rem;">
-                                  <div class="card-body">
-                                  <h5 class="card-title text-capitalize"><strong>
-                                  <%= event.title%></strong>
-                                  <span class="float-right btn btn-dark btn-sm">
-                                   <%= event.EventType%>
-                                  </span>
-                                  </h5>
-                                  <h6 class="card-subtitle mb-2 text-muted">
-                                  <span class="float-left"> Timings :</span>
-                                  <div class="float-left bg-primary text-white p-1 rounded text-center mx-2">
-                                       <strong><%= event.startTime.slice(0,10) %>
-                                       <br><%= event.startTime.slice(11,16) %></strong>
-                                   </div>
-                                   <div class="float-left bg-primary text-white p-1 rounded text-center mx-2">
-                                        <strong><%= event.endTime.slice(0,10) %>
-                                        <br><%= event.endTime.slice(11,16) %></strong>
+                <div class="container">
+                    <h1>Events</h1>
+                    <div class="row mt-3">
+                        <% Events.forEach(function(event) { %>
+                            <div class="col-lg-5 col-sm-10 mt-3">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h5 class="card-title  text-capitalize"><strong><%= event.title%></strong>
+                                      <span class="float-right btn btn-dark btn-sm"><%= event.EventType%></span>
+                                        </h5>
+                                        <h6 class="card-subtitle mb-2 text-muted">
+                                    <span class="float-left"> Timings :</span>
+                                    <br>
+                                    <div class="float-left bg-primary text-white p-1 rounded text-center mx-2">
+                                         <strong><%= event.startTime.slice(0,10) %>
+                                         <br><%= event.startTime.slice(11,16) %></strong>
+                                     </div>
+                                     <div class="float-left bg-primary text-white p-1 rounded text-center mx-2">
+                                          <strong><%= event.endTime.slice(0,10) %>
+                                          <br><%= event.endTime.slice(11,16) %></strong>
+                                      </div>
+                                      <br>
+                                      <br>
+                              </h6>
+                                        <p class="card-text">
+                                            <% var EventDesc = event.breif ;
+                              try{
+                                  var EventDesc =EventDesc.substr(0,120) ;
+                              }catch(e){
+
+                              }%>
+                                                <%= EventDesc  %>
+
+                                        </p>
+                                        <a href="/events/<%= event._id %>" class="card-link btn btn-info">View</a>
+                                        <a href="#" class="btn btn-dark"><i class="fa fa-hand-o-up"></i>  <%= event.interested.length %> </a>
+
+                                        <span class="float-right">
+                              By <%= event.author.username%>
+                              </span>
                                     </div>
-
-                                    <br>
-                                    <br>
-
-                                  </h6>
-                                  <p class="card-text">
-                                      <% var EventDesc = event.breif ;
-                                      try{
-                                          var EventDesc =EventDesc.substr(0,120) ;
-                                      }catch(e){
-
-                                      }%>
-                                      <%= EventDesc  %>
-                                  </p>
-                                  <a href="/events/<%= event._id %>" class="card-link btn btn-info">View</a>
-                                  <a href="#" class="btn btn-dark"><i class="fa fa-hand-o-up"></i> <%= event.interested.length %> </a>
-
-                                  <span class="float-right">
-                                  By <%= event.author.username%>
-                                  </span>
-                                  </div>
+                                </div>
                             </div>
-                              <% });%>
-                        </div>
+                            <div class="col-lg-1 col-sm-1"></div>
+                            <% });%>
 
-                <div class="m-3 text-center">
-                    <a href="events" class="btn btn-success ">View More Events</a>
-                    <a href="events/new" class="btn btn-success">Submit an Event</a>
+                    </div>
+                    <div class="m-3 text-center">
+                        <a href="events" class="btn btn-success m-1">View More Events</a>
+                        <a href="events/new" class="btn btn-success m-1">Submit an Event</a>
+                    </div>
                 </div>
             </div>
             <div class="section ">
-                <div class="text-center m-3" style="font-size:25px; color: white">Live Project</div>
-                <div class="row">
-                    <% Projects.forEach(function(project) {
-                             %>
-                            <div class="card" class="ml-3 "; style="width:40%; margin-left: 5rem; margin-top: 1rem;">
-                                  <div class="card-body">
-                                  <h5 class="card-title text-capitalize"><strong>
-                                  <%= project.title%></strong>
-                                  <span class="float-right btn btn-dark btn-sm">
-                                   <%= project.type%>
-                                  </span>
-                                  </h5>
-                                  <h6 class="card-subtitle mb-2 text-muted">
-                                  <%= project.technology%>
+                <div class="container">
+                    <h1>Projects</h1>
 
-                                  </h6>
-                                  <p class="card-text">
-                                      <% var projectDesc = project.shortDesc ;
-                                      try{
-                                          var projectDesc = project.shortDesc.substr(0,120) ;
-                                      }catch(e){
+                    <div class="row ">
+                        <% Projects.forEach(function(project) { %>
 
-                                      }%>
-                                      <%= projectDesc  %>
-                                  </p>
-                                  <a href="/projects/<%= project._id %>" class="card-link btn btn-info">View</a>
-                                  <a href="#" class="btn btn-dark"><i class="fa fa-eye"></i> <%= project.views %> </a>
+                            <div class="col-lg-5 col-sm-10 mt-3">
+                                <div class="card" >
+                                    <div class="card-body">
+                                        <h5 class="card-title"><strong>
+                                        <%= project.title%></strong>
+                                        <span class="float-right btn btn-dark btn-sm">
+                                         <%= project.type%>
+                                        </span>
+                                        </h5>
+                                        <h6 class="card-subtitle mb-2 text-muted">
+                                        <%= project.technology%>
 
-                                  <span class="float-right">
-                                  By <%= project.author.username%>
-                                  </span>
-                                  </div>
+                                        </h6>
+                                        <p class="card-text">
+                                            <% var projectDesc = project.shortDesc ;
+                                        try{
+                                            var projectDesc = project.shortDesc.substr(0,120) ;
+                                        }catch(e){
+
+                                        }%>
+                                                <%= projectDesc  %>
+
+                                        </p>
+                                        <a href="/projects/<%= project._id %>" class="card-link btn btn-info">View</a>
+                                        <a href="#" class="btn btn-dark"><i class="fa fa-eye"></i> <%= project.views %> </a>
+                                        <span class="float-right">
+                                        By <%= project.author.username%>
+                                        </span>
+                                    </div>
+                                </div>
                             </div>
-                              <% });%>
-                        </div>
+                            <div class="col-lg-1 col-sm-1"></div>
+                            <% });%>
+                    </div>
 
-                <div class="m-3 text-center">
-                    <a href="projects" class="btn btn-success ">View More Projects</a>
-                    <a href="projects/new" class="btn btn-success">I have project Idea</a>
+                    <div class="m-3 text-center">
+                        <a href="projects" class="btn btn-success m-1">View More Projects</a>
+                        <a href="projects/new" class="btn btn-success m-1">I have project Idea</a>
+                    </div>
                 </div>
             </div>
             <div class="section ">
-                <div class="slide text-center" data-anchor="slide1">
-                  <h1>Why &alpha;bit</h1>
-                      <h3 class="mt-2  text-white" style="padding:5rem;">
-                          To  promote and improve the overall programming skills of the students.
-                          <br>
-                        To create a culture of Competitive programming & prepare the students for prestigious coding contests.
-                      </h3>
+                <div class="slide " data-anchor="slide1">
+                    <div class="container">
+                        <h1>Why &alpha;bit</h1>
+                        <h3 class="text-white p-3 text-center">
+                              To  promote and improve the overall programming skills of the students.
+                              <br>
+                            To create a culture of Competitive programming & prepare the students for prestigious coding contests.
+                          </h3>
+                    </div>
+
                 </div>
                 <div class="slide" data-anchor="slide2">
-                      <h1>Why &alpha;bit</h1>
-                    <h3 class="mt-2 text-white text-center" style="padding:5rem;">
-
-
+                    <div class="container">
+                        <h1>Why &alpha;bit</h1>
+                        <h3 class="text-white p-3 text-center">
                             To build a community of students with shared interests so as to provide them an opportunity to learn by working in teams & master the art of team work & collaboration.
+                        </h3>
+                    </div>
 
-                    </h3>
                 </div>
                 <div class="slide" data-anchor="slide3">
-                      <h1>Why &alpha;bit</h1>
-                    <h3 class="mt-2 text-white text-center" style="padding:5rem;">
-To guide the uninitiated students on how to proceed & make the most of their precious four years in B.Tech.
-                    </h3>
+                    <div class="container">
+                        <h1>Why &alpha;bit</h1>
+                        <h3 class="text-white p-3 text-center">
+
+                            To guide the uninitiated students on how to proceed & make the most of their precious four years in B.Tech.
+                        </h3>
+                    </div>
+
                 </div>
             </div>
             <div class="section ">
-                <h2 class="text-center" style="color:white;">Core Team</h2>
+                <div class="container">
+
+
+                <h1>Core Team</h1>
                 <div class="row">
-                    <div class="col-lg-1 ml-1">
-                    </div>
-                    <div class="col-lg-2">
+
+                    <div class="col-lg-3">
                         <div class="card">
                             <img class="card-img-top " src="https://res.cloudinary.com/skpuri/image/upload/c_scale,w_1077/v1522903889/shubhamPuri.jpg" alt="Card image" style="width:100%">
                             <div class="card-body">
@@ -140,7 +156,7 @@ To guide the uninitiated students on how to proceed & make the most of their pre
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-3">
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Prathmesh Maurya</h4>
@@ -150,7 +166,7 @@ To guide the uninitiated students on how to proceed & make the most of their pre
                             <img class="card-img-bottom" src="http://res.cloudinary.com/skpuri/image/upload/v1522994158/IMG-20180405-WA0029.jpg" alt="Card image" style="width:100%">
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-3">
                         <div class="card">
                             <img class="card-img-top" src="https://pbs.twimg.com/profile_images/758916607523508224/HtPcWsuc_400x400.jpg" alt="Card image" style="width:100%">
                             <div class="card-body">
@@ -160,7 +176,7 @@ To guide the uninitiated students on how to proceed & make the most of their pre
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-3">
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Lakshay Sharma</h4>
@@ -170,7 +186,7 @@ To guide the uninitiated students on how to proceed & make the most of their pre
                             <img class="card-img-bottom" src="http://res.cloudinary.com/skpuri/image/upload/v1522905143/IMG-20180405-WA0003.jpg" style="width:100%">
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-3">
                         <div class="card">
                             <img class="card-img-top" src="https://res.cloudinary.com/skpuri/image/upload/v1522905314/IMG-20180405-WA0002.jpg" alt="Card image" style="width:100%">
                             <div class="card-body">
@@ -180,8 +196,8 @@ To guide the uninitiated students on how to proceed & make the most of their pre
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-1 ml-1"></div>
                 </div>
             </div>
+            </div>
         </div>
-<% include partials/footer %>
+        <% include partials/footer %>
