--- a/views/events/new.ejs
+++ b/views/events/new.ejs
@@ -2,16 +2,16 @@
     <% include ../partials/landing-navbar %>
         <div id="wrapper" style="color: white;">
             <div class="section ">
-                <div class="text-center " style="margin-top: 6rem;">
-                    <h2>New Event </h2>
-                </div>
+                <div class="container " >
+                    <h1>New Event </h1>
+
                 <form action="/events" method="POST">
-                    <div class="form-group p-3 border rounded w-75 mx-auto">
-                        <div class="form-group  m-3">
+                    <div class="form-group p-2 p-lg-3 border rounded  mx-auto">
+                        <div class="form-group  m-lg-3">
                             <label for="name[title]">Title:</label>
                             <input type="text" name="event[title]" id="EventName" placeholder="Event Name" class="form-control " required="true">
                         </div>
-                        <div class="form-group m-3">
+                        <div class="form-group m-lg-3">
                             <label for="sel1" name="event[EventType]">Event Type:</label>
                             <select class="form-control" name="event[EventType]" id="event[EventType]">
                                 <option value="Cultural Fest">Cultural Fest</option>
@@ -37,26 +37,27 @@
 
                                 console.log(today);
                                 %>
-                            <div class="form-group  m-3">
+                            <div class="form-group  m-lg-3">
                                 <label for="name[startTime]">Event Start Date and Time:</label>
                                 <input type="datetime-local" name="event[startTime]" min="<%= today %>" class="form-control" id="autoFill" required="true">
                             </div>
-                            <div class="form-group  m-3">
+                            <div class="form-group  m-lg-3">
                                 <label for="name[endTime]">Event End Date and Time:</label>
                                 <input type="datetime-local" name="event[endTime]" min="<%= today %>" class="form-control" id="autoFill" required="true">
                             </div>
 
-                            <div class="form-group  m-3">
+                            <div class="form-group  m-lg-3">
                                 <label for="event[breif]">Event  Description:</label>
                                 <textarea name="event[breif]" placeholder="Breif" rows="5" class="form-control"></textarea>
                             </div>
-                            <div class="form-group  m-3">
+                            <div class="form-group  m-lg-3">
                                 <label for="event[link]">Official Link:</label>
                                 <input type="text" name="event[link]" id="EventName" placeholder="official link" class="form-control ">
                             </div>
                             <input type="submit" name="submit" class="btn btn-success btn-lg ml-3">
                     </div>
                 </form>
+            </div>
             </div>
         </div>
         <% include ../partials/footer %>
