--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,10 +2,13 @@
     <% include partials/landing-navbar %>
         <div id="wrapper" style="color: white;">
             <div class="section ">
-            <h3 class="text-center mt-3 "> Login</h3>
-            <div class="row mt-lg-3">
-                <div class="col-lg-2"></div>
-                <div class="col-lg-8">
+                <div class="container">
+
+
+            <h1> Login</h1>
+            <div class="row ">
+                <div class="col-lg-2 col-sm-1"></div>
+                <div class="col-lg-8 col-sm-10">
                     <div class="table-bordered p-2 rounded">
                         <form action="/login" method="POST">
                             <div class="form-group">
@@ -20,7 +23,8 @@
                         </form>
                     </div>
                 </div>
-                <div class="col-lg-2"></div>
+                <div class="col-lg-2 col-sm-1"></div>
+            </div>
             </div>
         </div>
 <% include partials/footer %>
