--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title><%= title %></title>
     <link rel="icon" href="/Images/Logo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--bootstap!-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
