--- a/views/partials/landing-navbar.ejs
+++ b/views/partials/landing-navbar.ejs
@@ -5,83 +5,40 @@
  <nav>
         <div class="navbar2">
             <a href="/">
-            <img src="/Images/Logo.png" alt="" style="height: 70px; margin:10px;" class="ml-5"></a>
+            <img src="/Images/Logo.png" alt="" style="height: 70px; " class="ml-3 m-1"></a>
             <div class="navbar-btn">
-
-                <div id="togglebtn" class=" mr-5 mt-3 ">
+                <div id="togglebtn" class="mr-5 mt-3 ">
                     <% if(!currentUser){%>
-                   <a href="/register" class="btn btn-success "> SignUp</a>
-                   <a href="/login" class="btn btn-info">Login</a>
-                   <% } else { %>
-                   <span class="btn btn-info text-capitalize"><%= currentUser.username %></span>
-                      <a class="btn btn-danger" href="/logout">Logout</a>
-                    <% } %>
+                    <i class="fa fa-location-arrow " style="font-size:2rem; color:white;"></i>
+                     <% } else { %>
+                         <i class="fa fa-location-arrow " style="font-size:2rem; color:red;"></i>
+
+                         <% } %>
                 </div>
-
-
             </div>
-          <!--   <div class="navbar1 navbar-hide " id="navbar-hide">
+           <div class="navbar1 navbar-hide " id="navbar-hide">
 
-                <div class="register_page">
-                    <div class="text-center mt-5 mb-1">
+                <div class="register_page text-center">
+                    <div class=" mt-5 mb-1">
                         <img src="/Images/Logo.png" alt="" style="height: 70px;" >
-            </div>
-                    <div class="row pt-1">
-                        <div class="col-md-1"></div>
-                        <div class="card col-md-5 mr-1">
-                            <div class="card-header mt-3">Register</div>
-                            <div class="card-body text-left">
-                                <form>
-                                    <div class="form-group">
-                                        <label for="fullname">Full Name</label>
-                                        <input type="text" class="form-control" id="fullname" placeholder="Enter Full Name">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail1">Email</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputPassword1">Password</label>
-                                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                                    </div>
-                                    <div class="form-check">
-                                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                                    </div>
-                                    <div class="text-center">
-                                        <button type="submit" class="btn btn-primary">Register</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                        <div class="card col-md-5 ml-1">
-                            <div class="card-header mt-3">Login</div>
-                            <div class="card-body text-left">
-                                <form>
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail1">Email</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                                        <small id="emailHelp" class="form-text text-muted">Valid email like kumar@kumar.com</small>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputPassword1">Password</label>
-                                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                                    </div>
-                                    <div class="form-check">
-                                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                        <label class="form-check-label" for="exampleCheck1">Keep me logged In</label>
-                                    </div>
-                                    <div class="text-center">
-                                        <button type="submit" class="btn btn-primary">Login</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                        <div class="col-md-1"></div>
+                    </div>
+                    <div class="container">
+
+
+                    <% if(!currentUser){%>
+                   <a href="/register" class="btn btn-success  m-2"> SignUp</a><br>
+
+                   <a href="/login" class="btn btn-info m-2 ">Login</a>
+                   <br>
+                   <% } else { %>
+                   <span class="btn btn-info  text-capitalize m-2"><%= currentUser.username %></span>
+                   <br>
+                      <a class="btn btn-danger  m-2" href="/logout">Logout</a>
+                      <br>
+                    <% } %>
                     </div>
                 </div>
                 <button id="cancel" class="btn-danger btn mt-3 p-1" onclick="cancelfun()"><i class="fa fa-remove"></i>Cancel</button>
             </div>
-        </div> -->
+        </div>
     </nav>
