--- a/views/projects/new.ejs
+++ b/views/projects/new.ejs
@@ -2,17 +2,17 @@
     <% include ../partials/landing-navbar %>
         <div id="wrapper" style="color: white;">
             <div class="section ">
-                <div class="text-center " style="margin-top: 6rem;">
-                    <h2>New Project </h2>
-                </div>
+                <div class="container " >
+                    <h1>New Project </h1>
+
                 <form action="/projects" method="POST">
-                    <div class="form-group p-3 border rounded w-75 mx-auto">
-                        <div class="form-group  m-3">
+                    <div class="form-group p-2 p-lg-3 border rounded  mx-auto">
+                        <div class="form-group  m-lg-3">
                             <label for="name[title]">Title:</label>
                             <input type="text" name="project[title]" id="projectName" placeholder="Project Name" onfocus="formvalidate(3,projectName,projectName)" class="form-control " required="true">
 
                         </div>
-                        <div class="form-group m-3">
+                        <div class="form-group m-lg-3">
                             <label for="sel1" name="project[type]">Project Type:</label>
                             <select class="form-control" name="project[type]" id="project[type]">
                                 <option value="Android">Android</option>
@@ -23,21 +23,22 @@
 
                             </select>
                         </div>
-                        <div class="form-group  m-3">
+                        <div class="form-group  m-lg-3">
                             <label for="name[technology]">Technology to be used:</label>
                             <input type="text" name="project[technology]" placeholder="like Php" class="form-control" id="autoFill" required="true">
                         </div>
-                        <div class="form-group  m-3">
+                        <div class="form-group  m-lg-3">
                             <label for="name[title]">Short Description(must be between 30 - 50 words):</label>
                             <input type="text" name="project[shortDesc]" placeholder="Brief" class="form-control " required="true">
                         </div>
-                        <div class="form-group  m-3">
+                        <div class="form-group  m-lg-3">
                             <label for="blog[body]">Complete Project Description:</label>
                             <textarea name="project[body]" placeholder="blog post" rows="7" class="form-control"></textarea>
                         </div>
                         <input type="submit" name="submit" class="btn btn-success btn-lg ml-3">
                     </div>
                 </form>
+                </div>
             </div>
         </div>
         <% include ../partials/footer %>
