--- a/views/projects/show.ejs
+++ b/views/projects/show.ejs
@@ -1,35 +1,34 @@
 <% include ../partials/header %>
-  <% include ../partials/landing-navbar %>
-    <div id="wrapper" style="color: white;">
-      <div class="section ">
-        <div class="row" style="margin-top: 6rem; font-size:1.3rem;">
+    <% include ../partials/landing-navbar %>
+        <div id="wrapper">
+            <div class="section ">
+                <div class="container">
+                    <div class="row" id="show-div">
+                        <div class=" col-lg-9 col-sm-12 mb-2 border rounded  p-2">
+                            <h1 class="text-capitalize"><u><%= project.title %> </u></h1>
+                            <div class="float-right bg-primary text-white p-1 rounded text-center">
+                                <% var ptime = project.posted  %>
+                                    <%= ptime.getDate() %> /
+                                        <%= ptime.getMonth() %>
+                                            <br>
+                                            <b> <%= ptime.getFullYear() %></b>
+                            </div>
+                            <span> Submitted by - <%= project.author.username %></span>
+                            <div> Project Type : <strong><%= project.type %></strong></div>
 
-          <div class="col-lg-1"> </div>
-          <div class=" col-lg-8  border rounded  p-lg-3">
-              <h1 class="text-capitalize"><u><%= project.title %> </u></h1>
-              <div class="float-right bg-primary text-white p-1 rounded text-center">
-                <% var ptime = project.posted  %>
-                  <%= ptime.getDate() %> /
-                    <%= ptime.getMonth() %>
-                      <br>
-                      <b> <%= ptime.getFullYear() %></b>
-              </div>
-              <span> Submitted by - <%= project.author.username %></span>
-              <div> Project Type : <strong><%= project.type %></strong></div>
+                            <div> Technology to be used : <strong><%= project.technology %></strong></div>
+                            <div class=" border rounded  m-2 p-1 "><strong> Brief :</strong>
+                                <p>
+                                    <%= project.shortDesc %>
+                            </div>
+                            <div class=" border rounded  m-2 p-1 "><strong> Description :</strong>
+                                <p>
+                                    <%= project.body %>
+                            </div>
 
-              <div> Technology to be used : <strong><%= project.technology %></strong></div>
-              <div class=" border rounded mx-lg-3 p-lg-1 "><strong> Brief :</strong>
-                <p>
-                  <%= project.shortDesc %>
-              </div>
-              <div class=" border rounded m-lg-3 p-lg-1 "><strong> Description :</strong>
-                <p>
-                  <%= project.body %>
-              </div>
-
-          </div>
-          <div class="col-lg-2 border rounded  bg-white " style="color:#006266">
-                <h3>  Interested Students
+                        </div>
+                        <div class="col-lg-3 col-sm-12 border rounded  bg-white " style="color:#006266">
+                            <h3>  Interested Students
                   <% var pppp= project.interested;
 
                   var obj = 0 ;
@@ -44,16 +43,18 @@
                   if(currentUser && !obj){ %>
                   <a href="/projects/<%= project._id %>/addInterested" class="btn btn-primary">Add me</a>
                     <% } %>
-                </h3><hr>
-                <ol>
-                  <% var pppp= project.interested;
+                </h3>
+                            <hr>
+                            <ol>
+                                <% var pppp= project.interested;
                    pppp.forEach(function(Interesteduser) { if(Interesteduser) { %>
-                     <li class="ml-3"><%= Interesteduser.username %> </li>
-                  <%} });%>
-                  </ol>
-          </div>
-          <div class="col-lg-1 ">
-          </div>
-        </div>
-      </div>
-      <% include ../partials/footer %>
+                                    <li class="ml-3">
+                                        <%= Interesteduser.username %>
+                                    </li>
+                                    <%} });%>
+                            </ol>
+                        </div>
+
+                    </div>
+                </div>
+                <% include ../partials/footer %>
