--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,26 +5,67 @@
                 <div class="container">
 
 
-            <h1> Login</h1>
-            <div class="row ">
-                <div class="col-lg-2 col-sm-1"></div>
-                <div class="col-lg-8 col-sm-10">
-                    <div class="table-bordered p-2 rounded">
-                        <form action="/login" method="POST">
-                            <div class="form-group">
-                                <label for="username">Username:</label>
-                                <input type="text" name="username" class="form-control" placeholder="Username" required="true">
+
+                    <div class="row m-lg-5 text-center" id="login" style="color:#006266; min-height:75vh;">
+                        <div class="col-lg-4 bg-dark  p-3">
+                            <h1> Login</h1>
+                            <h1> <a href="#signup"  id ="signUpAppear" class="btn btn-success">Don't have an account</a> </h1>
+                        </div>
+
+                        <div class="col-lg-8 p-lg-5 p-sm-3 bg-light">
+                            <div class=" p-2 rounded">
+                                <form action="/login" method="POST">
+                                    <div class="form-group">
+                                        <%# <label for="username">Username:</label> %>
+                                            <input type="text" autofocus name="username" class="form-control" placeholder="Username" required="true">
+                                    </div>
+                                    <div class="form-group">
+                                        <%# <label for="password">Password:</label> %>
+                                            <input type="password" name="password" placeholder="Password" class="form-control" required="true">
+                                    </div>
+                                    <button class="btn btn-success">LogIn</button>
+                                </form>
                             </div>
-                            <div class="form-group">
-                                <label for="password">Password:</label>
-                                <input type="password" name="password" placeholder="Password" class="form-control" required="true">
+                        </div>
+                    </div>
+                    <div class="row m-lg-5 text-center d-none" id="signup" style="color:#006266; min-height:75vh;">
+                        <div class="col-lg-4 bg-dark  p-3">
+                            <h1> SignUp</h1>
+                            <h1> <a href="#login" id ="logInAppear" class="btn btn-success">Already have account</a> </h1>
+                        </div>
+                        <div class="col-lg-8 p-lg-5 p-sm-3 bg-light">
+                            <div class="table-bordered p-2 rounded">
+                                <form action="/register" method="POST">
+                                    <div class="form-group">
+
+                                        <input type="text" name="username" minlength="4" class="form-control" placeholder="Username" required="true">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" name="email" class="form-control" placeholder="Email" required="true">
+                                    </div>
+                                    <div class="form-group">
+
+                                        <select class="form-control text-center" name="semester" id="project[type]">
+                                            <option value="1" >1st Sem</option>
+                                            <option value="2">2nd Sem</option>
+                                            <option value="3">3rd Sem</option>
+                                            <option value="4">4th Sem</option>
+                                            <option value="5">5th Sem</option>
+                                            <option value="6">6th Sem</option>
+                                            <option value="7">7th Sem</option>
+                                            <option value="8">8th Sem</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+
+                                        <input type="password" name="password" minlength="4" placeholder="Password" class="form-control" required="true">
+                                    </div>
+
+                                    <button class="btn btn-success">Sign Up</button>
+                                </form>
+
                             </div>
-                            <button class="btn btn-success">LogIn</button>
-                        </form>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-2 col-sm-1"></div>
-            </div>
-            </div>
-        </div>
-<% include partials/footer %>
+                <% include partials/footer %>
