--- a/views/partials/landing-navbar.ejs
+++ b/views/partials/landing-navbar.ejs
@@ -12,31 +12,31 @@
                     <i class="fa fa-location-arrow " style="font-size:2rem; color:white;"></i>
                      <% } else { %>
                          <i class="fa fa-location-arrow " style="font-size:2rem; color:red;"></i>
-
-                         <% } %>
+                  <% } %>
                 </div>
             </div>
            <div class="navbar1 navbar-hide " id="navbar-hide">
 
                 <div class="register_page text-center">
-                    <div class=" mt-5 mb-1">
-                        <img src="/Images/Logo.png" alt="" style="height: 70px;" >
-                    </div>
+
+                        <img src="/Images/Logo.png" class=" mt-3 mb-1" alt="" style="height: 70px;" >
+                        <!-- <button id="cancel" class="float-right mr-5 mt-3  " onclick="cancelfun()"><i class="fa fa-times-circle"></i></button> %>
+-->
                     <div class="container">
 
 
-                    <% if(!currentUser){%>
-                   <a href="/register" class="btn btn-success  m-2"> SignUp</a><br>
+                        <% if(!currentUser){%>
 
-                   <a href="/login" class="btn btn-info m-2 ">Login</a>
-                   <br>
-                   <% } else { %>
-                   <span class="btn btn-info  text-capitalize m-2"><%= currentUser.username %></span>
-                   <br>
-                      <a class="btn btn-danger  m-2" href="/logout">Logout</a>
-                      <br>
-                    <% } %>
-                    </div>
+
+                       <a href="/login" class="btn btn-success  my-2">Login / SingUp</a>
+                       <br>
+                       <% } else { %>
+                       <span class="btn btn-info  text-capitalize my-2"><%= currentUser.username %></span>
+                       <br>
+                          <a class="btn btn-danger  my-2" href="/logout">Logout</a>
+                          <br>
+                        <% } %>
+                        </div>
                 </div>
                 <button id="cancel" class="btn-danger btn mt-3 p-1" onclick="cancelfun()"><i class="fa fa-remove"></i>Cancel</button>
             </div>
